[package]
name = "cpi"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cpi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
solana-program = "1.9.13"
anchor-lang = "0.28.0"
tokio = "^1"
futures = "0.3"
switchboard-solana = "0.9.5"
switchboard-utils = "0.8"
bytemuck_derive = "1.4.1"
bytemuck = "1.13.1"



